crates/sui-rpc-api/tests/snapshots/ledger_history_pins__checkpoints__end_beyond_tip_desc.snap
---
source: crates/sui-rpc-api/tests/ledger_history_pins.rs
expression: output
---
#0 item cp=4 | wm.cursor=item(cp=4) wm.cp=4 | end=-
#1 item cp=3 | wm.cursor=item(cp=3) wm.cp=3 | end=-
#2 no-item | wm.cursor=boundary(cp=3) wm.cp=3 | end=QUERY_END_REASON_CHECKPOINT_BOUND
