crates/sui-rpc-api/tests/snapshots/ledger_history_pins__checkpoints__start_eq_end_asc.snap
---
source: crates/sui-rpc-api/tests/ledger_history_pins.rs
expression: output
---
#0 no-item | wm.cursor=boundary(cp=3) wm.cp=- | end=QUERY_END_REASON_CHECKPOINT_BOUND
