crates/sui-rpc-api/tests/snapshots/ledger_history_pins__checkpoints__window_1_4_desc.snap
---
source: crates/sui-rpc-api/tests/ledger_history_pins.rs
expression: output
---
#0 item cp=3 | wm.cursor=item(cp=3) wm.cp=3 | end=-
#1 item cp=2 | wm.cursor=item(cp=2) wm.cp=2 | end=-
#2 item cp=1 | wm.cursor=item(cp=1) wm.cp=1 | end=-
#3 no-item | wm.cursor=boundary(cp=1) wm.cp=1 | end=QUERY_END_REASON_CHECKPOINT_BOUND
